package Ejercicio3;

public class Requirement {
    private String description;
    private boolean completed;

    public Requirement(String description) {
        this.description = description;
        this.completed = false;
    }

    public String getDescription() {
        return description;
    }

    public boolean isCompleted() {
        return completed;
    }

    public void markAsCompleted() {
        this.completed = true;
    }
}